# tanki

./: '  2  Cargo.toml  Dockerfile  README.md  docker-compose.yml  german.json  index.html
.github/workflows/: rebuild-docker-compose.yml
assets/: cards.json
dist_prod/: index.html  tanki-5a2504272e8dbd5d_bg.wasm  tanki-63feee25d289fe9c.js  tanki-63feee25d289fe9c_bg.wasm  tanki-ac1d9434455c78fc.js  tanki-ac1d9434455c78fc_bg.wasm  tanki-d39f54e36f1bd874.js  tanki-d39f54e36f1bd874_bg.wasm
src/: env.rs  env.rs.prod  letter.rs  main.rs
src/components/: dict_card.rs  letter.rs  mod.rs  tanki.rs  typing.rs  typing_wrapper.rs
src/data/: card.rs  cards_generator.rs  cards_generator_provider.rs  mod.rs  random_cards_generator.rs
src/data/generators/: cards_generator.rs  mod.rs  random_cards_generator.rs
src/data/providers/: cards_context_provider.rs  current_cards_provider.rs  mod.rs  random_cards_generator_provider.rs
src/helpers/: format_json.rs  mod.rs
