[package]
name = "tanki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# yew = "0.19.3"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo = "0.6.1"
# wasm-logger = "0.2.0"
# log = "0.4.6"
web-sys = { version = "0.3.59" , features=["KeyboardEvent", "HtmlInputElement"]}
wasm-bindgen = "0.2.82"
chrono = "0.4.22"
