[package]
name = "tanki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# yew = "0.19.3"
# yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew = { version = "0.19.3" }
gloo = "0.6.1"
# wasm-logger = "0.2.0"
# log = "0.4.6"
web-sys = { version = "0.3.59" , features=["KeyboardEvent", "HtmlInputElement", "Window", "Crypto"]}
wasm-bindgen = "0.2.82"
chrono = "0.4.22"
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
wasm-bindgen-futures = "0.4"
sorted-vec = "0.8.0"
stylist = { version = "0.10.1", features = ["yew_integration"]}
yew_icons = { version = "0.4.1", features = ["FontAwesomeRegularKeyboard", "FontAwesomeSolidKeyboard", "BootstrapGithub"]}
